tree-sitter-qsp/grammar.js
    source_file: $ => seq(
      optional($.inter_loc_text),
      repeat(seq($.location_block, optional($.inter_loc_text))),
    ),

    // ── Location blocks ─────────────────────────────────────────────────────

    // PEG: locationBlock = startOfLoc (~endLocMarker statementGroup)* endOfLoc
    location_block: $ => seq(
      $.location_header,
      repeat($._statement_group),
      $.location_end,
    ),

    // PEG: startOfLoc = "#" space* locName space* newline
    // Note: extras handles the spaces around location_name automatically
    location_header: $ => seq($._location_start_mark_ext, $.location_name, $._newline),

    // PEG: locName = locNameChar+ (space+ locNameChar+)*
    // locNameChar = ~(space | newline) any
    location_name: $ => /[^ \t\r\n]+([ \t]+[^ \t\r\n]+)*/,

    // PEG: endOfLoc = "--" endOfLocChar* (newline | &end)
    location_end: $ => prec.right(seq(
      $._location_end_mark_ext,
      optional(token.immediate(/[^\r\n]*/)),
      optional($._newline),
    )),

    // PEG: interLocText = (interLocLine | newline)*
    _statement_group: $ => choice(
      $.single_line_block,
      $.multi_line_block,
      $._newline,
    ),

    // PEG: singleLineBlock = singleLineGroup ws (newline | &end)
    single_line_block: $ => prec.right(seq(
      $._single_line_group,
      $._newline,
    )),

    // PEG: singleLineGroup      = singleLineStatements | statementSeparators
    // PEG: singleLineStatements = (statementSeparators ws)? statementUnitSingleLine (ws statementSeparators ws statementUnitSingleLine)* (ws statementSeparators)?
    // PEG: statementSeparators  = statementSeparator (ws statementSeparator)*
    _single_line_group: $ => prec.right(choice(
      $._single_line_statements,
      $._statement_separators,
    )),

    multi_line_block: $ => prec.right(seq(
      $._stmt_multi,
      optional(seq('&', $._single_line_group)),
      $._newline,
    )),

    // ── Code-block statement groups (terminate at "}" not EOF) ──────────────

    _stmt_multi: $ => choice(
      $.if_block,
      $.act_block,
      $.loop_block,
    ),

    // ══════════════════════════════════════════════════════════════════════════
    // COMMENTS
    // ══════════════════════════════════════════════════════════════════════════

    // PEG: commentStatement = "!" commentText
    // PEG: commentText = (rawCodeBlock | rawStringLiteral | commentChar)*
    // PEG: commentChar = ~newline any
    //
    // rawCodeBlock {..} and rawStringLiteral '...' / "..." can span newlines,
    // making comments multi-line when they contain those constructs.
    comment_statement: $ => prec.right(seq('!', optional($.comment_text))),

    // PEG: commentText = (rawStringLiteral | rawCodeBlock | commentChar)*
    // PEG: commentChar = ~(newline | "'" | "\"" | "{" | "}") any
    comment_text: $ => prec.right(repeat1(choice(
      $._raw_string,
      $.raw_code_block,
      /[^\r\n{}'"]+/,
    ))),

    // ══════════════════════════════════════════════════════════════════════════
    // ASSIGNMENTS & LOCALS
    // ══════════════════════════════════════════════════════════════════════════

    // PEG: assignmentStatement = (setMarker &delimiterChar ws)? variableList ws assignmentOperator ws nonAmpersandArgument1plusList
    assignment_statement: $ => prec.dynamic(1, prec.right(seq(
      optional(field('keyword', alias(choice(ci('set'), ci('let')), $.set_keyword))),
      field('variables', $.variable_list),
      field('operator', $.assignment_operator),
      field('value', $._na_arg_list),
    ))),

    // PEG: localStatement = localMarker &delimiterChar ws variableList (ws "=" ws nonAmpersandArgument1plusList)?
    local_statement: $ => prec.right(seq(
      field('keyword', alias(ci('local'), $.local_keyword)),
      field('variables', $.variable_list),
      optional(seq('=', field('value', $._na_arg_list))),
    )),

    variable_list: $ => prec.right(seq(
      $.variable_ref,
      repeat(seq(',', $.variable_ref)),
    )),

    assignment_operator: $ => choice('=', '+=', '-=', '*=', '/='),

    // ══════════════════════════════════════════════════════════════════════════
    // IF STATEMENTS
    // ══════════════════════════════════════════════════════════════════════════

    // PEG: ifSingleLine = ifMarker &delimiterChar ws expression ws ":" ws singleLineGroup
    //   (ws elseIfMarker &delimiterChar ws expression ws ":" ws singleLineGroup)*
    //   (ws elseMarker &delimiterChar (ws ":")? ws singleLineGroup)?
    if_inline: $ => prec.right(seq(
      field('keyword', alias(ci('if'), $.if_keyword)),
      field('condition', $._ext_expression),
      ':',
      field('then', $._single_line_group),
      repeat($.elseif_inline),
      optional($.else_inline),
    )),

    elseif_inline: $ => seq(
      field('keyword', alias(choice(ci('elseif'), seq(ci('else'), ci('if'))), $.elseif_keyword)),
      field('condition', $._ext_expression),
      ':',
      field('body', $._single_line_group),
    ),

    else_inline: $ => choice(
      seq(
        field('keyword', alias(kwc('else'), $.else_keyword)),
        field('body', $._single_line_group),
      ),
      seq(
        field('keyword', alias(ci('else'), $.else_keyword)),
        field('body', $._single_line_group),
      ),
    ),

    // PEG: ifMultiLine = ifMarker ... ":" ws commentStatement? newline statementGroup* elseifClause* elseClause? ws endIfMarker (ws noteString)?
    if_block: $ => prec.right(seq(
      field('keyword', alias(ci('if'), $.if_keyword)),
      field('condition', $._ext_expression),
      ':',
      optional($.comment_statement),
      $._newline,
      repeat($._statement_group),
      repeat($.elseif_clause),
      optional($.else_clause),
      field('end', alias(ci('end'), $.end_keyword)),
      optional(field('note', $.note_string)),
    )),

    // PEG: elseifClause = elseifMultiLine | elseifSingleLine (multi tried first)
    // elseifSingleLine = elseif expr ":" singleLineGroup newline
    // elseifMultiLine  = elseif expr ":" commentStatement? newline statementGroup*
    //
    // The ":" after the condition is mandatory in both variants.
    // We don't fuse it with the keyword since there's an expression between them.
    elseif_clause: $ => prec.right(choice(
      // Multi-line: only optional comment after ":", then newline + body lines
      seq(
        field('keyword', alias(choice(ci('elseif'), seq(ci('else'), ci('if'))), $.elseif_keyword)),
        field('condition', $._ext_expression),
        ':', optional($.comment_statement), $._newline,
        repeat($._statement_group),
      ),
      // Single-line: body on same line as ":"
      seq(
        field('keyword', alias(choice(ci('elseif'), seq(ci('else'), ci('if'))), $.elseif_keyword)),
        field('condition', $._ext_expression),
        ':', $._single_line_group, $._newline,
      ),
    )),

    // PEG: elseClause = elseMultiLine | elseSingleLine
    // elseSingleLine = elseMarker (":" ws)? singleLineGroup newline
    // elseMultiLine  = elseMarker (":" commentStatement?)? newline statementGroup*
    //
    // The colon after "else" is optional. To prevent ":" from being stolen
    // by label_statement in the body, we fuse "else" + ":" into a single
    // atomic keyword token (kwc). Variants:
    //   1. else:  [!comment] \n stmts    — multi-line with colon (fused token)
    //   2. else   \n stmts              — multi-line without colon
    //   3. else:  body \n               — single-line with colon (fused token)
    //   4. else   body \n               — single-line without colon
    else_clause: $ => prec.right(choice(
      // Multi-line with colon: else: [!comment] \n stmts
      seq(field('keyword', alias(kwc('else'), $.else_keyword)), optional($.comment_statement), $._newline, repeat($._statement_group)),
      // Multi-line without colon: else [!comment] \n stmts
      seq(field('keyword', alias(ci('else'), $.else_keyword)), optional($.comment_statement), $._newline, repeat($._statement_group)),
      // Single-line with colon: else: body \n
      seq(field('keyword', alias(kwc('else'), $.else_keyword)), $._single_line_group, $._newline),
      // Single-line without colon: else body \n
      seq(field('keyword', alias(ci('else'), $.else_keyword)), $._single_line_group, $._newline),
    )),

    // ══════════════════════════════════════════════════════════════════════════
    // ACT STATEMENTS
    // ══════════════════════════════════════════════════════════════════════════

    // PEG: actSingleLine = actMarker ... ws (parenthesizedArgList | argList) ws ":" ws singleLineGroup
    act_block: $ => prec.right(seq(
      field('keyword', alias(ci('act'), $.act_keyword)),
      field('args', choice($.paren_args, $._ext_arg_list)),
      ':',
      optional($.comment_statement),
      $._newline,
      repeat($._statement_group),
      field('end', alias(ci('end'), $.end_keyword)),
      optional(field('note', $.note_string)),
    )),

    // ══════════════════════════════════════════════════════════════════════════
    // LOOP STATEMENTS
    // ══════════════════════════════════════════════════════════════════════════

    // PEG: loopSingleLine = loopMarker (ws singleLineGroup)? ws whileMarker ws expression (ws stepMarker ws singleLineGroup)? ws ":" ws singleLineGroup
    loop_inline: $ => prec.right(seq(
      field('keyword', alias(ci('loop'), $.loop_keyword)),
      optional(field('init', $._single_line_group)),
      field('while', alias(ci('while'), $.while_keyword)),
      field('condition', $._ext_expression),
      optional(seq(
        field('step_kw', alias(ci('step'), $.step_keyword)),
        field('step', $._single_line_group),
      )),
      ':',
      field('body', $._single_line_group),
    )),

    // PEG: loopMultiLine
    loop_block: $ => prec.right(seq(
      field('keyword', alias(ci('loop'), $.loop_keyword)),
      optional(field('init', $._single_line_group)),
      field('while', alias(ci('while'), $.while_keyword)),
      field('condition', $._ext_expression),
      optional(seq(
        field('step_kw', alias(ci('step'), $.step_keyword)),
        field('step', $._single_line_group),
      )),
      ':',
      optional($.comment_statement),
      $._newline,
      repeat($._statement_group),
      field('end', alias(ci('end'), $.end_keyword)),
      optional(field('note', $.note_string)),
    )),

    // ══════════════════════════════════════════════════════════════════════════
    // REGULAR STATEMENTS
    // ══════════════════════════════════════════════════════════════════════════

    // PEG: statement = statementEmptyArgs | statementWithArgs | statementNoArgs
    // Unified — tree-sitter can't do PEG ordered choice
    statement: $ => prec.right(seq(
      field('name', $.statement_name),
      optional(choice(
        prec(2, seq('(', ')')),                    // empty args (higher prec than paren_tuple)
        $.paren_args,                              // parenthesized args
        $._na_arg_list,                            // bare args (no &)
      )),
    )),

    statement_name: $ => kw(STATEMENTS),

    // ══════════════════════════════════════════════════════════════════════════
    // USER CALLS  (@@name / @name)
    // ══════════════════════════════════════════════════════════════════════════

    // PEG: userCallStatement = @@name [args]
    label_statement: $ => prec.right(seq(':', field('name', $.label_name))),

    // PEG: noteString = (rawStringLiteral | rawCodeBlock | noteChar)+
    // PEG: noteChar = ~(statementSeparator | newline | "'" | "\"" | "{" | "}"
    //                  | "(" | ")" | "[" | "]") any
    // {..} and '...'/"..." can span multiple lines.
    label_name: $ => prec.right(repeat1(choice(
      $._raw_string,
      $.raw_code_block,
      /[^\r\n&{}'"()\[\]]+/,
    ))),

    // Used after `end` in multi-line if/act/loop
    _ext_expression: $ => choice($.ext_binary, $._ext_unary),

    ext_binary: $ => choice(
      prec.left(6,  seq($._ext_expression, alias(ci('or'),  $.op_or),  $._ext_expression)),
      prec.left(7,  seq($._ext_expression, alias(ci('and'), $.op_and), $._ext_expression)),
      prec.left(10, seq($._ext_expression, $._cmp_op, $._ext_expression)),
      prec.left(12, seq($._ext_expression, alias('&', $.op_amp), $._ext_expression)),
      prec.left(14, seq($._ext_expression, alias(choice('+', '-'), $.op_arith), $._ext_expression)),
      prec.left(16, seq($._ext_expression, alias(ci('mod'), $.op_mod), $._ext_expression)),
      prec.left(17, seq($._ext_expression, alias(choice('*', '/'), $.op_arith), $._ext_expression)),
    ),

    _ml_expression: $ => choice($.ml_binary, $._ml_unary),

    _cmp_op: $ => alias(choice('<>', '!', '<=', '=<', '>=', '=>', '=', '<', '>'), $.op_cmp),

    // PEG: parenthesizedExpression = "(" mws multilineExpression mws ")"
    // Inside parens → multiline context
    _na_arg_list: $ => seq($._na_expression, repeat(seq(',', $._na_expression))),

    // PEG: argument1plusList (with &)
    _ext_arg_list: $ => seq($._ext_expression, repeat(seq(',', $._ext_expression))),

    // PEG: parenthesizedArgument1plusList = "(" mws multilineArgList mws ")"
    paren_args: $ => prec(1, seq(
      '(', optional($._nls),
      $._ml_expression, optional($._nls),
      repeat(seq(',', optional($._nls), $._ml_expression, optional($._nls))),
      ')',
    )),

    // ══════════════════════════════════════════════════════════════════════════
    // TUPLES
    // ══════════════════════════════════════════════════════════════════════════

    // PEG: tuple = emptyTuple | nonEmptyTuple | emptyPseudoTuple | nonEmptyPseudoTuple
    variable_ref: $ => prec.right(seq(
      field('prefix', optional($.type_prefix)),
      field('name', $.identifier_text),
      optional(field('index', $.array_index)),
    )),

    // PEG: multilineVariableRef = varNameWithPrefix (mws (emptyArrayIndex | arrayIndex))?
    // No prec.right — GLR conflict declared so the parser forks on '\n':
    // one version tries array access (x\n[0]), the other reduces as a bare
    // variable and lets ml_binary handle 'x\n+ y'.
    string: $ => choice(
      $.single_quoted_string,
      $.double_quoted_string,
    ),

    single_quoted_string: $ => seq(
      "'",
      repeat(choice(
        alias($._string_interpolation_sq, $.string_interpolation),
        "''", token(prec(1, /[^'<]+/)), token(prec(-1, '<')),
      )),
      "'",
    ),

    _string_interpolation_sq: $ => seq(
      '<<',
      choice(
        seq(optional($._nls), $._ml_expression, optional($._nls)),
        alias($._intp_raw_body_sq_ext, $.interpolation_raw_body),
      ),
      '>>',
    ),

    number_literal: $ => /\d+/,

    // ══════════════════════════════════════════════════════════════════════════
    // CODE BLOCKS
    // ══════════════════════════════════════════════════════════════════════════

    // PEG: codeBlock = syntacticCodeBlock | rawCodeBlock
    //   Try syntactic first; fall back to raw when syntactic fails to balance.
    //
    // Tree-sitter is GLR (not PEG).  We unify both alternatives in one
    // rule by listing the syntactic statement-group first (preferred via
    // higher static prec) and the raw-text fallbacks last.  When the
    // syntactic alternative produces a valid parse, it wins; when it
    // would introduce ERROR/MISSING (e.g. an unbalanced `if a=0:` inside
    // `{<qhtml>... if a=0: ...</qhtml>}`), the raw alternative absorbs
    // the offending span as anonymous text instead, preventing the
    // unclosed block from swallowing the rest of the location.
    //
    // The per-char raw token uses `token(prec(-10, ...))` so it loses
    // the lexer race against every normal lexical token (identifiers,
    // keywords, numbers, operators, …).  It only fires when the
    // syntactic branch can't make progress at the current position.
    _nls: $ => prec.right(repeat1($._newline)),
  },
});
